--- a/translations/kangyur/translations/062-016_toh216-eliminating_ajatasatrus_remorse.xml
+++ b/translations/kangyur/translations/062-016_toh216-eliminating_ajatasatrus_remorse.xml
@@ -4,18 +4,18 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">ma skyes dgra’i ’gyod pa
-                                        bsal ba</title>
-                                <title type="mainTitle" xml:lang="bo">མ་སྐྱེས་དགྲའི་འགྱོད་པ་བསལ་བ།</title>
                                 <title type="mainTitle" xml:lang="en">Eliminating Ajātaśatru’s
                                         Remorse</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Ajāta­śatru­kaukṛtya­vinodana</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་མ་སྐྱེས་དགྲའི་འགྱོད་པ་བསལ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ma skyes dgra’i
-                                        ’gyod pa bsal ba zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">ma skyes dgra’i ’gyod pa
+                                        bsal ba</title>
+                                <title type="mainTitle" xml:lang="bo">མ་སྐྱེས་དགྲའི་འགྱོད་པ་བསལ་བ།</title>
                                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra
                                         “Eliminating Ajātaśatru’s Remorse”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Āryā­jātaśatru­kaukṛtya­vinodana­nāma­mahāyāna­sūtra</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ma skyes dgra’i
+                                        ’gyod pa bsal ba zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་མ་སྐྱེས་དགྲའི་འགྱོད་པ་བསལ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                                 <title type="otherTitle" xml:lang="zh">《阿闍世懺悔經》
                                         (大正藏：文殊支利普照三昧經)</title>
                                 <author ref="eft:team-9" role="translatorMain">Translated by the
@@ -36,11 +36,10 @@
                                         Doctor</editor>
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina
                                         Cotter</editor>
-                                <sponsor ref="sponsors.xml#sponsor-186">苏享国阖家, 马春树, 苏慧, 姚雨含, 马鑫,
-                                        刘弈汐, 林媛媛, 黄璎珞</sponsor>
+                                <sponsor ref="eft:sponsor-186">苏享国阖家, 曲尼俄萨, 苏慧, 姚雨含, 马鑫, 刘弈汐, 林媛媛, 黄璎珞</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -84,7 +83,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-02-21T09:57:59.665Z" user="admin">21/02/2023 09:57:59</note>
+                                <note type="lastUpdated" date-time="2023-02-22T03:08:28.778Z" user="admin">22/02/2023 03:08:28</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2019-05-24T15:11:16.945Z" user="john">2.g</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
@@ -122,8 +121,10 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.14" date-time="2023-02-09T09:10:56.892Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2023-02-21T09:57:53.77Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-21T09:57:53.77Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2023-02-21T09:57:53.77Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-21T09:57:53.77Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-22T03:02:57.812Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                            <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-22T03:08:27.261Z" user="cabie-sim">Auto (update-sponsorship)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
