--- a/translations/kangyur/placeholders/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/placeholders/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
@@ -14,10 +14,10 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2022</date>
+                <edition>v 0.0.13 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-101-146"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-17T15:34:40.473Z" user="admin">17/02/2023 15:34:40</note>
+                <note type="lastUpdated" date-time="2023-02-22T15:04:59.558Z" user="admin">22/02/2023 15:04:59</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-12T08:01:52.252Z" user="line-tofte">Auto (update-contributors)</note>
@@ -52,6 +52,8 @@
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-02-17T15:32:21.524Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-02-17T15:32:21.524Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-02-17T15:34:34.808Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-02-22T15:04:53.844Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-02-22T15:04:53.844Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
