--- a/translations/kangyur/placeholders/038-002_toh44-45a,1095-the_prayer_of_good_action.xml
+++ b/translations/kangyur/placeholders/038-002_toh44-45a,1095-the_prayer_of_good_action.xml
@@ -21,11 +21,11 @@
                 <editor role="reviser" ref="contributors.xml#person-143">Emily Bower</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-038-002"/>
                 <date/>
             </publicationStmt>
@@ -50,10 +50,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-01-27T12:58:08.408Z" user="admin">27/01/2020 12:58:08</note>
+                <note type="lastUpdated" date-time="2023-02-22T15:24:00.328Z" user="admin">22/02/2023 15:24:00</note>
             
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:05.65Z" user="mike">2.h</note>
+<note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:05.65Z" user="mike">2.h</note>    <note type="updated" update="translation-status" value="2.f" date-time="2023-02-22T15:23:55.921Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-22T15:23:55.921Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
