--- a/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -32,7 +32,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-02-20T14:29:04.729Z" user="admin">20/02/2023 14:29:04</note>
+                                <note type="lastUpdated" date-time="2023-02-23T20:06:40.198Z" user="admin">23/02/2023 20:06:40</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
@@ -118,6 +118,7 @@
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-02-17T20:36:47.726Z" user="martina-cotter">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-02-20T13:16:06.083Z" user="martina-cotter">issues with duplicate notes resolved.</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-02-20T14:29:01.878Z" user="martina-cotter">Updated acknowledgements.</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2023-02-23T20:06:36.895Z" user="martina-cotter">updated glossary entry.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -688,11 +689,11 @@
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-065-004-98">
-                                                <term>vajra base</term>
+                                                <term>vajra basis</term>
                                                   <term xml:lang="Bo-Ltn">rdo rje’i gzhi </term>
                                                   <term xml:lang="bo">རྡོ་རྗེའི་གཞི།</term>
                                                   <term xml:lang="Sa-Ltn"/>
-                                                  <term type="alternative">vajra basis</term>
+                                                <term type="alternative">vajra bases</term>
                                                 </gloss>
                     </item>
                                         <item>
