--- a/translations/kangyur/translations/060-005_toh176_teaching_of_vimalakirti.xml
+++ b/translations/kangyur/translations/060-005_toh176_teaching_of_vimalakirti.xml
@@ -20,7 +20,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.45.16 <date>2022</date>
+                <edition>v 1.45.19 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -52,7 +52,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-08T00:25:15.766Z" user="admin">08/12/2022 00:25:15</note>
+                <note type="lastUpdated" date-time="2023-02-23T20:17:56.091Z" user="admin">23/02/2023 20:17:56</note>
                 <note type="updated" update="text-version" value="v 1.36" date-time="2019-05-04T14:01:18.651Z" user="john">v 1.36 2017</note>
                 <note type="updated" update="text-version" value="v 1.38" date-time="2019-06-18T16:14:55.895Z" user="celso">v 1.38 2019</note>
                 <note type="updated" update="text-version" value="v 1.39" date-time="2019-07-02T17:59:15.102Z" user="john">v 1.39 2019</note>
@@ -87,6 +87,9 @@
     <note type="updated" update="text-version" value="1.45.14" date-time="2022-05-16T14:58:56.215Z" user="martina-cotter">Updated definition of g.308</note>
     <note type="updated" update="text-version" value="1.45.15" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.45.16" date-time="2022-12-08T00:25:12.743Z" user="konchog">One fix in note 90.</note>
+    <note type="updated" update="text-version" value="1.45.17" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+    <note type="updated" update="text-version" value="1.45.18" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.45.19" date-time="2023-02-23T20:17:53.084Z" user="martina-cotter">Updated typo.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -192,7 +195,7 @@
                     <milestone unit="chunk" xml:id="UT22084-060-005-29"/>
                     <p tid="15">Mañjuśrī, despite his own reluctance, is the only bodhisattva to assent to the Buddha’s request, and the fourth and
                         subsequent chapters describe the conversations between him, Vimalakīrti, and a number of other interlocutors from the large
-                        assembly accompanying Mañjuśrī to Vimalakīrt’s house in the eager anticipation of hearing the Dharma expressed in the exchange
+                        assembly accompanying Mañjuśrī to Vimalakīrti’s house in the eager anticipation of hearing the Dharma expressed in the exchange
                         between these two high-level bodhisattvas. Their discussion starts with what is meant by sickness, how a bodhisattva should
                         comfort another bodhisattva who is sick, and how a sick bodhisattva should control his own mind, with most of the dialogue
                         consisting of long passages spoken by Vimalakīrti in response to brief questions by Mañjuśrī. In the fifth chapter,
