--- a/translations/kangyur/placeholders/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
+++ b/translations/kangyur/placeholders/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
@@ -17,9 +17,10 @@
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2021</date>
+                <edition>v 0.0.12 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.c">
@@ -38,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-27T09:08:38.761Z" user="admin">27/02/2023 09:08:38</note>
+                <note type="lastUpdated" date-time="2023-02-27T09:09:41.226Z" user="admin">27/02/2023 09:09:41</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:41:51.022Z" user="line-tofte">Auto (update-contributors)</note>
@@ -57,6 +58,7 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-11-15T14:16:01.503Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-02-27T09:08:32.988Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-02-27T09:08:32.988Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-02-27T09:09:35.467Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
