--- a/translations/kangyur/placeholders/091-080_toh682,901-the_sutra_the_essence_of_amoghapasa.xml
+++ b/translations/kangyur/placeholders/091-080_toh682,901-the_sutra_the_essence_of_amoghapasa.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-091-080"/>
                 <date/>
             </publicationStmt>
@@ -41,10 +41,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:35:16.829Z" user="admin">15/12/2022 14:35:16</note>
+                <note type="lastUpdated" date-time="2023-02-28T11:35:59.4Z" user="admin">28/02/2023 11:35:59</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:34:45.406Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:34:45.406Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:35:11.065Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-02-28T11:35:53.616Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-28T11:35:53.616Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
