--- a/translations/kangyur/placeholders/091-081_toh683-the_incantation_the_essence_of_amoghapasa.xml
+++ b/translations/kangyur/placeholders/091-081_toh683-the_incantation_the_essence_of_amoghapasa.xml
@@ -6,27 +6,31 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">don yod zhags pa'i snying po'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">amoghapāśahṛdayadhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation, The Essence of Amoghapāśa</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Essence of Amoghapāśa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa don yod zhags pa'i snying po zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāmoghapāśahṛdayanāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-091-081"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh683" type="text">
                     <ref>Toh 683</ref>
                     <biblScope>vol.91, ff.284v-287r(pp.568-573)</biblScope>
-                    <location count-pages="6">
-                        <start volume="91" page="570"/>
-                        <end volume="91" page="575"/>
+                    <location work="UT4CZ5369" count-pages="6">
+                        <volume number="91" start-page="568" end-page="573"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12421" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:36:05 by admin</note>
+                <note type="lastUpdated" date-time="2023-02-28T11:52:36.141Z" user="admin">28/02/2023 11:52:36</note>    <note type="updated" update="translation-status" value="2.h" date-time="2023-02-28T11:52:31.713Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-02-28T11:52:31.713Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
