--- a/translations/kangyur/placeholders/091-081_toh683-the_incantation_the_essence_of_amoghapasa.xml
+++ b/translations/kangyur/placeholders/091-081_toh683-the_incantation_the_essence_of_amoghapasa.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">don yod zhags pa'i snying po'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">amoghapāśahṛdayadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Essence of Amoghapāśa</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa don yod zhags pa'i snying po zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">amoghapāśahṛdayadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">don yod zhags pa'i snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāmoghapāśahṛdayanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa don yod zhags pa'i snying po zhes bya ba'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -30,7 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-28T11:52:36.141Z" user="admin">28/02/2023 11:52:36</note>    <note type="updated" update="translation-status" value="2.h" date-time="2023-02-28T11:52:31.713Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-02-28T11:52:31.713Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-02-28T11:53:03.822Z" user="admin">28/02/2023 11:53:03</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-02-28T11:52:31.713Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2023-02-28T11:52:31.713Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-28T11:53:02.29Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
