--- a/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -32,7 +32,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.1 <date>2023</date>
+                <edition>v 1.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-02-28T13:32:10.233Z" user="admin">28/02/2023 13:32:10</note>
+                                <note type="lastUpdated" date-time="2023-02-28T13:38:13.084Z" user="admin">28/02/2023 13:38:13</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
@@ -120,6 +120,7 @@
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-02-20T14:29:01.878Z" user="martina-cotter">Updated acknowledgements.</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-02-23T20:06:36.895Z" user="martina-cotter">updated glossary entry.</note>
                             <note type="updated" update="text-version" value="1.1.1" date-time="2023-02-28T13:32:07.277Z" user="john">Added pargraph to intro and glossary entry for "unfounded pride."</note>
+                            <note type="updated" update="text-version" value="1.1.2" date-time="2023-02-28T13:38:10.126Z" user="john">Further minor edits.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -247,7 +248,7 @@
                                                 the present text, though perhaps less cryptically: “Those who become afraid … are themselves of the nature of the realm of phenomena, 
                                                 and the nature of the realm of phenomena does not become frightened.” Unlike 
                                                 the other two shorter texts, however, <title xml:lang="en">The Teaching on the Indivisible Nature of the Realm of Phenomena</title> then
-                                                goes on to elaborate in some detail on the theme of “excessive pride” in this context. First, some “proud monks”
+                                                goes on to elaborate in some detail on the theme of pride in this context. First, some “proud monks”
                                                 are immediately liberated by hearing the teaching.<note place="end" xml:id="UT22084-065-004-62">See <title xml:lang="en">The Teaching on 
                                                         the Indivisible Nature of the Realm of Phenomena</title>
                                                         <ref target="https://read.84000.co/translation/Toh52.html#UT22084-040-003-22">1.9</ref>.</note> Then, another group of proud monks leaves the scene feeling
@@ -255,7 +256,7 @@
                                                 teaching.<note place="end" xml:id="UT22084-065-004-63">See <title xml:lang="en">The Teaching on 
                                                         the Indivisible Nature of the Realm of Phenomena</title>
                                                         <ref target="https://read.84000.co/translation/Toh52.html#UT22084-040-003-41">1.19–1.31</ref>.</note> Further on still
-                                                in the narrative, Mañjuśrī explains in detail what is meant by excessive pride on many levels,
+                                                in the narrative, Mañjuśrī explains in detail what is meant by unfounded or excessive pride on many levels,
                                                 culminating in its sense of dualistic, conceptual conceits that prevent one from engaging fully with the emptiness 
                                                 and sameness of all phenomena.<note place="end" xml:id="UT22084-065-004-64">See <title xml:lang="en">The Teaching on 
                                                         the Indivisible Nature of the Realm of Phenomena</title>
