--- a/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -32,7 +32,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.2 <date>2023</date>
+                <edition>v 1.1.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-02-28T13:38:13.084Z" user="admin">28/02/2023 13:38:13</note>
+                                <note type="lastUpdated" date-time="2023-02-28T16:18:49.829Z" user="admin">28/02/2023 16:18:49</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
@@ -121,6 +121,7 @@
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-02-23T20:06:36.895Z" user="martina-cotter">updated glossary entry.</note>
                             <note type="updated" update="text-version" value="1.1.1" date-time="2023-02-28T13:32:07.277Z" user="john">Added pargraph to intro and glossary entry for "unfounded pride."</note>
                             <note type="updated" update="text-version" value="1.1.2" date-time="2023-02-28T13:38:10.126Z" user="john">Further minor edits.</note>
+                            <note type="updated" update="text-version" value="1.1.3" date-time="2023-02-28T16:18:46.614Z" user="john">Further minor edits and added bibliography entry.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -235,10 +236,10 @@
                                         <milestone unit="chunk" xml:id="UT22084-065-004-60"/>
                                         <p tid="65">Moreover, both <title xml:lang="en">The Wheel
                                                 of Meditative Concentration</title> and <title xml:lang="en">Infinite Jewels</title> (<title xml:lang="Sa-Ltn">Ratnakoṭi</title>,
-                                                Toh 118) appear to make condensed reference to yet a third text,
+                                                Toh 118) have a thematically close relationship with yet a third text,
                                                 <title xml:lang="en">The Teaching on the Indivisible Nature of the Realm of Phenomena</title> 
-                                                (<title xml:lang="Sa-Ltn">Dharmadhātu­prakṛtyasambheda­nirdeśa</title>, Toh 52), a longer and more detailed work
-                                                that opens with a teaching on the realm of phenomena given by Mañjuśrī at the Buddha’s request. The short passage
+                                                (<title xml:lang="Sa-Ltn">Dharmadhātu­prakṛtyasambheda­nirdeśa</title>). 
+                                                That longer and more detailed work opens with a teaching on the realm of phenomena given by Mañjuśrī at the Buddha’s request. The short passage
                                                 recounting that teaching<note place="end" xml:id="UT22084-065-004-61">See <title xml:lang="en">The Teaching on 
                                                         the Indivisible Nature of the Realm of Phenomena</title>
                                                         <ref target="https://read.84000.co/translation/Toh52.html#UT22084-040-003-13">1.3–1.6</ref>.</note> 
@@ -251,8 +252,8 @@
                                                 goes on to elaborate in some detail on the theme of pride in this context. First, some “proud monks”
                                                 are immediately liberated by hearing the teaching.<note place="end" xml:id="UT22084-065-004-62">See <title xml:lang="en">The Teaching on 
                                                         the Indivisible Nature of the Realm of Phenomena</title>
-                                                        <ref target="https://read.84000.co/translation/Toh52.html#UT22084-040-003-22">1.9</ref>.</note> Then, another group of proud monks leaves the scene feeling
-                                                disconcerted and Mañjuśrī has to use his powers and bring them back by means of a further 
+                                                        <ref target="https://read.84000.co/translation/Toh52.html#UT22084-040-003-22">1.9</ref>.</note> Then, another 
+                                                group of proud monks leaves the scene, confused and disconcerted, and Mañjuśrī has to use his powers and bring them back by means of a further 
                                                 teaching.<note place="end" xml:id="UT22084-065-004-63">See <title xml:lang="en">The Teaching on 
                                                         the Indivisible Nature of the Realm of Phenomena</title>
                                                         <ref target="https://read.84000.co/translation/Toh52.html#UT22084-040-003-41">1.19–1.31</ref>.</note> Further on still
@@ -260,9 +261,10 @@
                                                 culminating in its sense of dualistic, conceptual conceits that prevent one from engaging fully with the emptiness 
                                                 and sameness of all phenomena.<note place="end" xml:id="UT22084-065-004-64">See <title xml:lang="en">The Teaching on 
                                                         the Indivisible Nature of the Realm of Phenomena</title>
-                                                        <ref target="https://read.84000.co/translation/Toh52.html#UT22084-040-003-76">1.39–1.47</ref>.</note> That 
-                                                text therefore throws considerable light on the two shorter texts
-                                                in which Mañjuśrī’s statements are left unexplained.</p>
+                                                        <ref target="https://read.84000.co/translation/Toh52.html#UT22084-040-003-76">1.39–1.47</ref>.</note> Although the historical relationship 
+                                                of these texts remains to be determined,<note place="end" xml:id="UT22084-065-004-117">Toh 118 seems to the earliest to have been translated into 
+                                                        Chinese, probably in the second or third century.</note> <title xml:lang="en">The Teaching on the Indivisible Nature of the Realm of Phenomena</title> 
+                                                does help to throw light on the two shorter texts in which Mañjuśrī’s statements are left unexplained.</p>
                                         <milestone unit="chunk" xml:id="UT22084-065-004-17"/>
                                         <p tid="14">The present translation is based on the Degé
                                                 Kangyur, with reference to variants in other
@@ -525,6 +527,12 @@
                         </title> (<title xml:lang="Sa-Ltn">Ratnakoṭi</title>, Toh 118).
                                                 84000: Translating the Words of the Buddha,
                                                 2022.</bibl>
+                                        <bibl xml:id="UT22084-065-004-120">————, trans. <title xml:lang="en">
+                            <ptr target="https://read.84000.co/translation/Toh52.html">The Teaching 
+                                                on the Indivisible Nature of the Realm of Phenomena</ptr>
+                        </title> (<title xml:lang="Sa-Ltn">Dharmadhātu­prakṛtyasambheda­nirdeśa</title>, Toh 52).
+                                                84000: Translating the Words of the Buddha,
+                                                2018.</bibl>
                                         <bibl xml:id="UT22084-065-004-74">Li, Channa. “A Survey of
                                                 Tibetan Sūtras Translated from Chinese, as Recorded
                                                 in Early Tibetan Catalogues.” <title xml:lang="fr">Revue d’Etudes
