--- a/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_13_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_13_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -17,7 +17,7 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2021</date>
+                <edition>v 0.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -32,23 +32,14 @@
                         <volume number="14" start-page="2" end-page="787"/>
                         <volume number="15" start-page="2" end-page="803"/>
                         <volume number="16" start-page="2" end-page="787"/>
-                        <volume number="17" start-page="2" end-page="725"/>
-                        <!--<volume number="17" start-page="726" end-page="761"/>
-                        <volume number="18" start-page="2" end-page="789"/>
-                        <volume number="19" start-page="2" end-page="763"/>
-                        <volume number="20" start-page="2" end-page="795"/>
-                        <volume number="21" start-page="2" end-page="797"/>
-                        <volume number="22" start-page="2" end-page="767"/>
-                        <volume number="23" start-page="2" end-page="773"/>
-                        <volume number="24" start-page="2" end-page="821"/>
-                        <volume number="25" start-page="2" end-page="789"/>-->
+                        <volume number="17" start-page="2" end-page="564"/>
                     </location>
                     <idno parent-id="O1JC114941JC14665" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11520" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-19T14:55:11.349Z" user="john">19/01/2023 14:55:11</note>
+                <note type="lastUpdated" date-time="2023-02-28T16:32:44.005Z" user="admin">28/02/2023 16:32:44</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-23T18:52:39.151Z" user="john">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T18:52:39.151Z" user="john">Split from original single Toh 8 file</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-23T18:54:30.339Z" user="john">Auto (update-contributors)</note>
@@ -61,6 +52,7 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-01-17T10:54:14.8Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-17T10:54:14.8Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-01-17T10:54:52.817Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-02-28T16:32:39.391Z" user="john">Auto (update-locations)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
