--- a/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/translations/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -32,7 +32,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.3 <date>2023</date>
+                <edition>v 1.1.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-02-28T16:18:49.829Z" user="admin">28/02/2023 16:18:49</note>
+                                <note type="lastUpdated" date-time="2023-02-28T22:54:36.409Z" user="admin">28/02/2023 22:54:36</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
@@ -122,6 +122,7 @@
                             <note type="updated" update="text-version" value="1.1.1" date-time="2023-02-28T13:32:07.277Z" user="john">Added pargraph to intro and glossary entry for "unfounded pride."</note>
                             <note type="updated" update="text-version" value="1.1.2" date-time="2023-02-28T13:38:10.126Z" user="john">Further minor edits.</note>
                             <note type="updated" update="text-version" value="1.1.3" date-time="2023-02-28T16:18:46.614Z" user="john">Further minor edits and added bibliography entry.</note>
+                            <note type="updated" update="text-version" value="1.1.4" date-time="2023-02-28T22:54:33.411Z" user="john">Further small edit.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -238,7 +239,7 @@
                                                 of Meditative Concentration</title> and <title xml:lang="en">Infinite Jewels</title> (<title xml:lang="Sa-Ltn">Ratnakoṭi</title>,
                                                 Toh 118) have a thematically close relationship with yet a third text,
                                                 <title xml:lang="en">The Teaching on the Indivisible Nature of the Realm of Phenomena</title> 
-                                                (<title xml:lang="Sa-Ltn">Dharmadhātu­prakṛtyasambheda­nirdeśa</title>). 
+                                                (<title xml:lang="Sa-Ltn">Dharmadhātu­prakṛtyasambheda­nirdeśa</title>, Toh 52). 
                                                 That longer and more detailed work opens with a teaching on the realm of phenomena given by Mañjuśrī at the Buddha’s request. The short passage
                                                 recounting that teaching<note place="end" xml:id="UT22084-065-004-61">See <title xml:lang="en">The Teaching on 
                                                         the Indivisible Nature of the Realm of Phenomena</title>
