--- a/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -11,11 +11,12 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadharmaketumahāyānasūtra</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-066-012"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh254" type="text">
@@ -29,8 +30,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-12-25T17:18:02.526Z" user="admin">25/12/2020 17:18:02</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-12-25T17:17:57.903Z" user="john">Translation of title changed</note>
+                <note type="lastUpdated" date-time="2023-03-01T09:24:23.334Z" user="admin">01/03/2023 09:24:23</note>
+    <note type="updated" update="text-version" value="0.0.2" date-time="2020-12-25T17:17:57.903Z" user="john">Translation of title changed</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:24:18.797Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-01T09:24:18.797Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
