--- a/translations/kangyur/placeholders/067-003_toh264-the_sutra_on_liberation.xml
+++ b/translations/kangyur/placeholders/067-003_toh264-the_sutra_on_liberation.xml
@@ -10,10 +10,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa thar pa chen po phyogs su rgyas pa 'gyod tshangs kyis sdig sbyangs te sangs rgyas su grub par rnam par bkod pa zhes bya ba theg pa chen po'i mdo</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2021</date>
+                <edition>v 0.0.4 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-067-003"/>
                 <date/>
             </publicationStmt>
@@ -29,8 +29,8 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-19T06:28:10.163Z" user="admin">19/05/2022 06:28:10</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-26T13:56:29.874Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:52:24.696Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-08T09:52:24.696Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="" date-time="2022-05-19T06:28:04.448Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T06:28:04.448Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-03-01T09:30:38.35Z" user="admin">01/03/2023 09:30:38</note>
+    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-26T13:56:29.874Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:52:24.696Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-08T09:52:24.696Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="" date-time="2022-05-19T06:28:04.448Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T06:28:04.448Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:30:33.925Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-01T09:30:33.925Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
