--- a/translations/kangyur/placeholders/072-016_toh316-the_sutra_on_the_four_truths.xml
+++ b/translations/kangyur/placeholders/072-016_toh316-the_sutra_on_the_four_truths.xml
@@ -11,12 +11,12 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacatuḥsatyasūtra</title>
             </titleStmt>
     <editionStmt>
-                <edition>0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-072-016"/>
-    <date/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh316" type="text">
@@ -30,9 +30,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:30:25 by admin</note>
+                <note type="lastUpdated" date-time="2023-03-01T09:31:56.859Z" user="admin">01/03/2023 09:31:56</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-03T16:32:57.102Z" user="john">0.0.2</note>
-    <note type="updated" update="publication-date" value="" date-time="2020-08-03T16:32:57.102Z" user="john"/>
+    <note type="updated" update="publication-date" value="" date-time="2020-08-03T16:32:57.102Z" user="john"/>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:31:52.415Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-01T09:31:52.415Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
