--- a/translations/kangyur/placeholders/090-012_toh568,1004-the_incantation_of_jayavati.xml
+++ b/translations/kangyur/placeholders/090-012_toh568,1004-the_incantation_of_jayavati.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rgyal ba can gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">jayavatīdhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of Jayavatī</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of Jayavatī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal ba can zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajayavatīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal ba can zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajayavatīnāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-090-012"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh568" type="text">
                     <ref>Toh 568</ref>
                     <biblScope>vol.90, ff.191v-195r(pp.380-387)</biblScope>
-                    <location count-pages="8">
-                        <start volume="90" page="382"/>
-                        <end volume="90" page="389"/>
+                    <location work="UT4CZ5369" count-pages="8">
+                        <volume number="90" start-page="380" end-page="387"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12301" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh1004" type="text">
                     <ref>Toh 1004</ref>
                     <biblScope>vol.101, ff.167r-171r(pp.333-341)</biblScope>
-                    <location count-pages="9">
-                        <start volume="101" page="335"/>
-                        <end volume="101" page="343"/>
+                    <location work="UT4CZ5369" count-pages="9">
+                        <volume number="101" start-page="333" end-page="341"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12767" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:31 by admin</note>
+                <note type="lastUpdated" date-time="2023-03-01T09:41:21.915Z" user="admin">01/03/2023 09:41:21</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:41:17.46Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:41:17.46Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
