--- a/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
+++ b/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
@@ -8,23 +8,27 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">caturgāthā</title>
                 <title type="mainTitle" xml:lang="en">The Four Stanzas</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-072-024"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh324" type="text">
                     <ref>Toh 324</ref>
                     <biblScope>vol.72, ff.204r-204v(pp.407-408)</biblScope>
-                    <location count-pages="2">
-                        <start volume="72" page="409"/>
-                        <end volume="72" page="410"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="72" start-page="407" end-page="408"/>
                     </location>
                     <idno parent-id="O1JC114941JC14668" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12000" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:30:04 by admin</note>
+                <note type="lastUpdated" date-time="2023-03-01T09:42:37.94Z" user="admin">01/03/2023 09:42:37</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:42:33.49Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:42:33.49Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
