--- a/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
+++ b/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
@@ -4,9 +4,9 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">khams mang po'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">dhātubahukasūtra</title>
-                <title type="mainTitle" xml:lang="en">The Sūtra of Many Domains</title>
+                <title type="mainTitle" xml:lang="en">The Sūtra of Many Elements</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">bahudhātukasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">khams mang po’i mdo/</title>
                 <author role="translatorMain" ref="contributors.xml#team-51"/>
                 <author role="translatorEng" ref="contributors.xml#person-291">Zsuzsa Majer</author>
                 <editor role="reviser" ref="contributors.xml#person-325">William Dewey</editor>
@@ -14,7 +14,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-291">Zsuzsa Majer</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -33,16 +33,17 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-19T12:45:13.863Z" user="admin">19/04/2021 12:45:13</note>
+                <note type="lastUpdated" date-time="2023-03-01T11:35:54.493Z" user="admin">01/03/2023 11:35:54</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-27T09:49:23.533Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-27T09:49:23.533Z" user="andreas">3</note>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-07-06T07:58:14.619Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-14T14:14:02.469Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-14T14:14:19.293Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-04-19T12:38:59.845Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-04-19T12:38:59.845Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-04-19T12:45:09.354Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-07-06T07:58:14.619Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-14T14:14:02.469Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-14T14:14:19.293Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-04-19T12:38:59.845Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-04-19T12:38:59.845Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-04-19T12:45:09.354Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="title" date-time="2023-03-01T11:35:48.567Z" user="john">In the Degé Kangyur the Sanskrit title is given as dhātubahukasūtra, and the Tibetan as khams mang po pa’i mdo.</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-01T11:35:48.567Z" user="john">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
