--- a/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
+++ b/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
@@ -14,7 +14,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-291">Zsuzsa Majer</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-01T11:36:54.267Z" user="admin">01/03/2023 11:36:54</note>
+                <note type="lastUpdated" date-time="2023-03-01T11:50:39.462Z" user="admin">01/03/2023 11:50:39</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-27T09:49:23.533Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-27T09:49:23.533Z" user="andreas">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-07-06T07:58:14.619Z" user="line-tofte">0.0.1</note>
@@ -43,8 +43,9 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-04-19T12:38:59.845Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-04-19T12:45:09.354Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-01T11:35:48.567Z" user="john">Auto (update-titles)</note>
-                <note type="title" date-time="2023-03-01T11:36:49.772Z" user="john">In the Degé Kangyur the Sanskrit title is given as dhātubahutakasūtra, and the Tibetan as khams mang po pa’i mdo.</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-01T11:36:49.772Z" user="john">Auto (update-titles)</note>
+                <note type="title" date-time="2023-03-01T11:50:34.843Z" user="john">In the Degé Kangyur the Sanskrit title is given as dhātubahutakasūtra, and the Tibetan as khams mang po pa’i mdo.</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-01T11:50:34.843Z" user="john">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
