--- a/translations/kangyur/placeholders/091-043_toh646,1080-the_incantation_for_protection_from_the_blazing_flames_coming_from_the_mouths_of_ghosts.xml
+++ b/translations/kangyur/placeholders/091-043_toh646,1080-the_incantation_for_protection_from_the_blazing_flames_coming_from_the_mouths_of_ghosts.xml
@@ -14,10 +14,10 @@
                 <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-091-043"/>
                 <date/>
             </publicationStmt>
@@ -42,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T07:52:31.316Z" user="admin">18/01/2023 07:52:31</note>
+                <note type="lastUpdated" date-time="2023-03-01T14:13:48.38Z" user="admin">01/03/2023 14:13:48</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:58:32.717Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:58:32.717Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T10:10:37.807Z" user="line-tofte">3</note>
@@ -54,6 +54,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-01-18T07:51:49.48Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-18T07:51:49.48Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-18T07:52:25.728Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-01T14:13:41.984Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-01T14:13:41.984Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
