--- a/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
+++ b/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
@@ -4,9 +4,13 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Sūtra of Many Elements</title>
+                <title type="mainTitle" xml:lang="en">The Multiplicity of Constituents</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">bahudhātukasūtra</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">khams mang po’i mdo/</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">khams mang po pa/ </title>
+                <title type="longTitle" xml:lang="en">The Sūtra “The Multiplicity of Constituents”</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">khams mang po pa zhes bya ba’i mdo/ </title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">dhātubahutākasūtra </title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">khams mang po’i mdo/</title>
                 <author role="translatorMain" ref="contributors.xml#team-51"/>
                 <author role="translatorEng" ref="contributors.xml#person-291">Zsuzsa Majer</author>
                 <editor role="reviser" ref="contributors.xml#person-325">William Dewey</editor>
@@ -14,7 +18,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-291">Zsuzsa Majer</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.10 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.h">
@@ -33,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-01T11:52:12.203Z" user="admin">01/03/2023 11:52:12</note>
+                <note type="lastUpdated" date-time="2023-03-02T15:58:03.29Z" user="admin">02/03/2023 15:58:03</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-27T09:49:23.533Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-27T09:49:23.533Z" user="andreas">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-07-06T07:58:14.619Z" user="line-tofte">0.0.1</note>
@@ -45,8 +49,9 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-01T11:35:48.567Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-01T11:36:49.772Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-01T11:50:34.843Z" user="john">Auto (update-titles)</note>
-                <note type="title" date-time="2023-03-01T11:52:07.597Z" user="john">In the Degé Kangyur the Sanskrit title is given as dhātubahutakasūtra, and the Tibetan as khams mang po pa’i mdo.</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-01T11:52:07.597Z" user="john">Auto (update-titles)</note>
+                <note type="title" date-time="2023-03-02T15:57:57.555Z" user="john">In the Degé Kangyur the Sanskrit title is given as dhātubahutakasūtra, and the Tibetan as khams mang po pa’i mdo.</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-03-02T15:57:57.555Z" user="john">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
